--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,3 +6,9 @@
 
 @import "layouts/sidebar";
 @import "layouts/navigation";
+
+@import "components/product-card";
+@import "components/alert";
+@import "components/modal";
+@import "components/form";
+@import "components/button"
