--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -3,6 +3,9 @@ html(lang="en")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title JMCD
+    title Kero - Admin
   body
-    // - Main Content  
+    // - Main Content
+    include pages/login
+    include pages/home
+    include pages/error
