--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -17,39 +17,20 @@ html, body {
 }
 
 body {
-  box-sizing: border-box;
-  background: linear-gradient(
-    to right bottom,
-    $color-primary-light,
-    $color-primary-dark
-  );
-}
+  box-sizing: border-box; 
 
-.pageWrapper {
-  background: $color-white;
-  max-height: 87vh;
-  max-width: 90vw;
-  display: block;
-  height: 100%;
-  width: 100%;
+  .page {
+    display: none;
+    min-width: 100%; 
+    min-height: calc(100vh - 4rem); 
 
-  display: grid;
-  grid-template-columns: 12rem 1fr;
+    @include respond($bp-largest) {
+      right: 2rem;
+      top: 2rem;
+    }
 
-  @include AbosoluteCenter;
-  @include Shadow(0, 0, 5rem, .5rem, .2);
-
-  & > * {
-    width: 100%;
-    height: 100%;
-    grid-row: 1/-1;
+    &.visible {
+      display: grid;
+    }
   }
-
-  .sidebar {
-    grid-column: 1/2;
-  }
-
-  .pages {
-    grid-column: 2/3;
-  }
-}
+} 
