Add - Logi funciton now works fine

--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -5,6 +5,13 @@
   transform: translate(-50%, -50%);
 }
 
+@mixin CenterAbsolute($top, $left) {
+  position: absolute;
+  top: $top;
+  left: $left;
+  transform: translate(-50%, -50%);
+}
+
 @mixin PositionAbsolute($top, $left) {
   position: absolute;
   top: $top;
