--- a/src/templates/pages/login.pug
+++ b/src/templates/pages/login.pug
@@ -1,6 +1,7 @@
 section.page.login#login
   .login__box 
-    .login__logo Hipermercado Kero do Sequele
+    .login__logo Kero Sequele
     form.login__form
-      input.form__element(type='email' placeholder='email')
-      input.form__element(type='email' placeholder='password')
+      input.form-element#login-email(type='email' placeholder='email' required)
+      input.form-element#login-password(type='password' placeholder='senha' required)
+      button.login__button(type='submit') Entrar
