Add - Page navigation working fine

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,6 @@
 @import "components/button";
 
 @import "layouts/sidebar";
-@import "layouts/navigation";
+@import "layouts/header";
 
 @import "pages/login";
