--- a/src/templates/pages/login.pug
+++ b/src/templates/pages/login.pug
@@ -1,7 +1,7 @@
 section.page.login#login
   .login__box 
     .login__logo Kero Sequele
-    form.login__form
+    form.login__form#form-login
       input.form-element#login-email(type='email' placeholder='email' required)
       input.form-element#login-password(type='password' placeholder='senha' required)
       button.login__button(type='submit') Entrar
