--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -7,7 +7,7 @@
 }
 
 html {
-  font-size: 62.6%; // 1rem = 10px;
+  font-size: 62.5%; // 1rem = 10px;
 }
 
 html, body {
@@ -19,10 +19,36 @@ html, body {
 body {
   box-sizing: border-box; 
 
+  .pages {
+    display: none;
+
+    &.visible {
+      width: 100%;
+      height: 100%;
+      max-width: 144rem;
+      max-height: 76rem;
+
+      display: grid;
+      grid-template-columns: 26rem 1fr;
+      grid-template-rows: 6.6rem 1fr;
+      grid-template-areas: 
+        "aside header"
+        "aside container"
+      ;
+
+      @include AbsoluteCenter;
+      @include Shadow(0, 0, 3rem, .2rem, .25);
+    }
+
+    .aside { grid-area: aside }
+    .header { grid-area: header }
+    &__container { grid-area: container }
+  }
+
   .page {
     display: none;
     min-width: 100%; 
-    min-height: 100vh;  
+    min-height: 100%;  
     background: $color-grey-light-2;
 
     &.visible {
