--- a/src/templates/layouts/header.pug
+++ b/src/templates/layouts/header.pug
@@ -1,7 +1,7 @@
 header.header
   .logo Hipermercado Sequele
   .user
-    .user__name Jeseias Domingos
+    p.user__name  
     img.user__img 
     svg.user__icon
       use(xlink:href=`src/assets/SVGs/sprite.svg#icon-chevron-with-circle-down`)
