--- a/src/templates/layouts/header.pug
+++ b/src/templates/layouts/header.pug
@@ -5,3 +5,6 @@ header.header
     img.user__img 
     svg.user__icon
       use(xlink:href=`src/assets/SVGs/sprite.svg#icon-chevron-with-circle-down`)
+    ul.user__menu 
+      li.user__menu__item Sair 
+
