--- a/src/templates/pages/products.pug
+++ b/src/templates/pages/products.pug
@@ -1,2 +1,10 @@
 section.page.products#products
-  h1 This is the product page
+  .products__header
+    .info
+    .action
+      button.products__add-btn
+        svg 
+          use(xlink:href=`src/assets/SVGs/sprite.svg#icon-plus`) 
+        span Products
+  .products__all
+   h1 This is the product page
