Add - Products basic setup complete

--- a/src/templates/pages/products.pug
+++ b/src/templates/pages/products.pug
@@ -1,6 +1,7 @@
 section.page.products#products
   .products__header
     .info
+      p.items 15 Produtos Cadastrados
     .action
       button.products__add-btn
         svg 
