--- a/src/sass/pages/_products.scss
+++ b/src/sass/pages/_products.scss
@@ -11,6 +11,15 @@
 
     border-bottom: 4px solid $color-dark;
     @include Shadow(0, 0, 1rem, 1rem, .25);
+
+    .info {
+
+      .items {
+        color: 2rem;
+        font-weight: bold;
+        color: $color-dark;
+      }
+    }
   }
 
   &__add-btn {
