--- a/src/sass/pages/_products.scss
+++ b/src/sass/pages/_products.scss
@@ -9,8 +9,7 @@
     align-content: center;
     padding: 1rem;
 
-    border-bottom: 4px solid $color-dark;
-    @include Shadow(0, 0, 1rem, 1rem, .25);
+    @include HeaderBottomLine;
 
     .info {
 
