--- a/src/sass/pages/_orders.scss
+++ b/src/sass/pages/_orders.scss
@@ -1,4 +1,146 @@
 .orders {
+  display: grid;
+  grid-template-rows: max-content 1fr;
+  padding-bottom: 1rem;
+  height: 100%;
+
+  &__all {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(auto-fit, 20rem);
+    grid-gap: 2rem;
+    overflow-y: scroll;
+    padding: 2rem;
+  }
+
+  .order {
+    display: grid;
+    grid-template-columns: 17rem 1fr;
+    grid-template-rows: 1fr max-content;
+    grid-gap: .5rem;
+    background: $color-white;
+
+    @include Outline;
+
+    &__user {
+      @include GridCenter;
+      align-content: space-around;
+      text-align: center;
+      border-right: 2px solid $color-grey;
+      grid-column: 1/2;
+      grid-row: 1/3;
+
+      &__img {
+        width: 8rem;
+        border-radius: 100%;
+        margin: 0 auto;
+      }
+
+      &__name {
+        font-size: 1.5rem;
+        text-align: center;
+        color: $color-dark;
+        font-weight: bold;
+      }
+    }
+
+    &__all-products {
+      display: flex;
+      justify-content: flex-start;
+      flex-wrap: wrap;
+      overflow-y: scroll;
+      grid-column: 2/3;
+      grid-row: 1/2;
+    } 
+
+    &__product {
+      width: 8rem;
+      height: 8rem;
+      margin-bottom: .5rem;
+      position: relative;
+      border-radius: 2px;
+
+      &, & * { @include Transition; } 
+
+      %product-badge {
+        display: block; 
+        background: $color-dark;
+        color: $color-white;
+        border-radius: 2px;
+        text-align: center;
+        opacity: 1;
+        padding: .4rem; 
+        opacity: 0;
+      }
+
+      &__img {
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: center;
+        @include PositionAbsolute(0,0);
+      }
+
+      &__quantity {
+        @extend %product-badge;
+        width: 40%;
+
+        @include CenterAbsolute(65%, 50%);
+      }
+
+      &__price {
+        @extend %product-badge;
+        width: 90%;
+        transition-delay: .05s;
+
+        @include CenterAbsolute(85%, 50%);
+      }
+
+      &__name {
+        @extend %product-badge;
+        width: 90%;
+        transition-delay: .1s;
+
+        @include CenterAbsolute(90%, 50%);
+      }
+
+      &:hover {
+
+        & :nth-child(1) {
+          opacity: .5;
+        }
+
+        & > * { opacity: 1; }
+
+        & :nth-child(2) {
+          top: 15%;
+        }
+
+        & :nth-child(3) {
+          top: 45%;
+        }
+
+        & :nth-child(4) {
+          top: 78%;
+        }
+      }
+    }
+
+    &__details {
+      grid-column: 2/3;
+      grid-row: 2/3;
+      align-self: end;
+      padding: .5rem 1rem;
+      color: $color-dark;
+      font-weight: bold;
+      display: flex;
+      justify-content: space-between; 
+
+      &--complete { border: 2px solid $color-primary; }
+      &--active { border: 2px solid $color-secondary; }
+      &--done { border: 2px solid $color-red; }
+    }
+  }
 
   &__header {
     @include HeaderBottomLine;
