Add - Clients page structure now complete

--- a/src/templates/pages/clientes.pug
+++ b/src/templates/pages/clientes.pug
@@ -1,2 +1,4 @@
 section.page.clients#clients
-  h1 This is the Clientes page
+  .clients__header 
+    p.clients__total 15 Clientes 
+  .clients__all
