--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -55,6 +55,7 @@ body {
     width: 100%; 
     max-height: 100%;  
     background: $color-grey-light-2;
+    padding-bottom: 1rem;
 
     &.visible {
       display: grid;
