Add - I can now check all the messages

--- a/src/templates/pages/messages.pug
+++ b/src/templates/pages/messages.pug
@@ -1,2 +1,4 @@
 section.page.messages#messages
-  h1 This is the Messages page
+  .messages__header
+    h1 This is the Messages page
+  .messages__all
