--- a/src/templates/pages/orders.pug
+++ b/src/templates/pages/orders.pug
@@ -1,9 +1,11 @@
 section.page.orders#orders 
   .orders__header
-    .info 
+    .orders__header__info 
       p.length 0 Encomendas no total
       p.orders__badge.orders__badge--complete 0 recomendas feito
       p.orders__badge.orders__badge--active 0 Encomendas sendo entregas
       p.orders__badge.orders__badge--done 0 Encomendas novas
+    .orders__header__settings 
+      button Atualizar
 
   .orders__all 
