--- a/src/sass/pages/_clients.scss
+++ b/src/sass/pages/_clients.scss
@@ -12,7 +12,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(14rem, 22rem));
     justify-content: center;
-    grid-template-rows: repeat(auto-fit, minmax(15rem, 20rem));
+    grid-template-rows: repeat(auto-fit, minmax(max-content, 20rem));
     grid-gap: 2rem;
     overflow-y: scroll;
 
