--- a/src/sass/pages/_products.scss
+++ b/src/sass/pages/_products.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-rows: 6rem 1fr;
   padding-bottom: 1rem;
+  height: 100%;
 
   &__header {
     display: grid;
@@ -50,10 +51,88 @@
 
   &__all {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 22rem));
+    justify-content: center;
     grid-gap: 2rem;
     padding: 2rem;
 
     overflow-y: scroll;
+  }
+}
+
+.form-edit-product {
+  @include Outline;
+  max-width: 85rem;
+  margin: 2rem auto 0 auto;
+  background: $color-white;
+
+  display: grid;
+  grid-template-columns: 35% 1fr;
+  grid-template-rows: max-content 1fr;
+  grid-gap: 1rem;
+  position: relative;
+
+  &__header {
+    height: 3rem;
+    grid-row: 1/2;
+    grid-column: 1/3;
+  }
+
+  &__inputs {
+
+    textarea {
+      min-height: 8rem;
+    } 
+  }
+
+  &__images {
+    position: relative;
+    // border: 2px dashed $color-dark;
+    @include GridCenter;
+
+    // &::after {
+    //   content: "Selecionar Imagen de Capa";
+    //   display: block;
+    //   font-size: 2rem;
+    //   color: $color-dark;
+    //   height: 100%;
+    //   width: 100%;
+    //   z-index: 100;
+    //   position: relative;
+
+    //   @include GridCenter;
+    // }
+
+    &:hover {
+      cursor: pointer;
+    }
+
+    input {
+      @include PositionAbsolute(0, 0);
+
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      z-index: 1000;
+      display: block;
+      background: red;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    img {
+      @include PositionAbsolute(0, 0);
+
+      width: 100%;
+      height: auto;
+      display: block;
+      border-radius: 4px;
+    }
+  }
+
+  &__submit {
+    color: $color-dark;
   }
 }
