--- a/src/sass/pages/_products.scss
+++ b/src/sass/pages/_products.scss
@@ -1,3 +1,22 @@
+%products-modal {
+  @include Outline;
+  max-width: 85rem;
+  margin: 2rem auto 0 auto;
+  background: $color-white;
+
+  display: grid;
+  grid-template-columns: 35% 1fr;
+  grid-template-rows: max-content 1fr;
+  grid-gap: 1rem;
+  position: relative;
+
+  &__header {
+    height: 3rem;
+    grid-row: 1/2;
+    grid-column: 1/3;
+  }
+}
+
 .products {
   display: grid;
   grid-template-rows: 6rem 1fr;
@@ -61,24 +80,10 @@
 }
 
 .form-edit-product {
-  @include Outline;
-  max-width: 85rem;
-  margin: 2rem auto 0 auto;
-  background: $color-white;
-
-  display: grid;
-  grid-template-columns: 35% 1fr;
-  grid-template-rows: max-content 1fr;
-  grid-gap: 1rem;
-  position: relative;
-
-  &__header {
-    height: 3rem;
-    grid-row: 1/2;
-    grid-column: 1/3;
-  }
+  @extend %products-modal;
 
   &__inputs {
+    grid-column: 1/2;
 
     textarea {
       min-height: 8rem;
@@ -89,6 +94,7 @@
     position: relative;
     // border: 2px dashed $color-dark;
     @include GridCenter;
+    grid-column: 2/3;
 
     // &::after {
     //   content: "Selecionar Imagen de Capa";
@@ -135,4 +141,69 @@
   &__submit {
     color: $color-dark;
   }
+}
+
+.add-new-product {
+  @extend %products-modal;
+
+  &__header {
+    height: 5rem;
+  }
+
+  &__inputs {
+    grid-column: 1/2;
+  }
+
+  &__images {
+    position: relative;
+
+    &.noimg {
+      
+      border: 2px dashed $color-dark;
+      @include GridCenter;
+  
+      &::after {
+        content: "Selecionar Imagen de Capa";
+        display: block;
+        font-size: 2rem;
+        color: $color-dark;
+        height: 100%;
+        width: 100%;
+        z-index: 100;
+        position: relative;
+  
+        @include GridCenter;
+      }
+    }
+
+    &:hover {
+      cursor: pointer;
+    }
+
+    input {
+      @include PositionAbsolute(0, 0);
+
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      z-index: 1000;
+      display: block;
+      background: red;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+
+    img {
+      @include PositionAbsolute(0, 0);
+
+      width: 100%;
+      height: auto;
+      display: block;
+      border-radius: 4px;
+    }
+  }
+
+
 }
