--- a/src/sass/pages/_messages.scss
+++ b/src/sass/pages/_messages.scss
@@ -10,7 +10,7 @@
   &__all {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: repeat(auto-fit, minmax(8rem, 8rem));
+    grid-template-rows: repeat(auto-fit, minmax(8rem, max-content));
     grid-gap: 2rem;
 
     padding: 2rem;
@@ -18,6 +18,7 @@
 
     .message-card {
       background: $color-white;
+      position: relative;
 
       @include Outline;
 
@@ -40,6 +41,22 @@
         margin-top: 1rem;
         font-size: 1.5rem;
         font-weight: bold;
+      }
+
+      &__delete {
+        position: absolute;
+        top: .5rem;
+        right: .5rem;
+        width: 2rem;
+        height: 2rem;
+        fill: $color-grey-dark;
+
+        @include Transition;
+
+        &:hover {
+          fill: $color-red;
+          cursor: pointer;
+        }
       }
     }
   }
