--- a/src/sass/pages/_clients.scss
+++ b/src/sass/pages/_clients.scss
@@ -7,6 +7,12 @@
     @include HeaderBottomLine; 
   }
 
+  &__total {
+    font-size: 2rem;
+    color: $color-dark;
+    font-weight: bold;
+  }
+
   &__all {
     padding: 4rem 2rem 1rem 2rem;
     display: grid;
@@ -33,6 +39,13 @@
         border-bottom: 2px solid $color-dark;
         padding-bottom: .5rem;
         margin-bottom: .5rem;
+        font-weight: bold;
+        color: $color-primary;
+      }
+
+      &__phone, &__email {
+        color: $color-dark;
+        font-weight: bold;
       }
     }
   }
