--- a/src/templates/pages/messages.pug
+++ b/src/templates/pages/messages.pug
@@ -1,4 +1,4 @@
 section.page.messages#messages
   .messages__header
-    h1 This is the Messages page
+    h1.messages__total 1 Mensagens
   .messages__all
