--- a/src/templates/layouts/aside.pug
+++ b/src/templates/layouts/aside.pug
@@ -3,10 +3,10 @@ aside.aside
     ul.nav__list
       - 
         const links = [
-          { name: 'Encomendas', link: 'orders', icon: 'home' },
-          { name: 'Produtos', link: 'products', icon: 'home' },
-          { name: 'Clientes', link: 'clients', icon: 'home' },
-          { name: 'Mensagens', link: 'messages', icon: 'home' }
+          { name: 'Encomendas', link: 'orders', icon: 'cart' },
+          { name: 'Produtos', link: 'products', icon: 'shopping-bag' },
+          { name: 'Clientes', link: 'clients', icon: 'user-tie' },
+          { name: 'Mensagens', link: 'messages', icon: 'envelop' }
         ]
       
       each link in links
