--- a/src/templates/pages/products.pug
+++ b/src/templates/pages/products.pug
@@ -7,6 +7,8 @@ section.page.products#products
         span.type.type--food Alimentos - 12
         span.type.type--mate Materias - 15
         span.type.type--colt Roupa - 12
+      .search-box   
+        input.products__search-input(placeholder="Pesquisa produtos...")
     .action
       button.products__add-btn
         svg 
